# deta-twitter-demo

./: .gitignore  README.md  main.py  pyproject.toml  requirement.txt  settings.py
