[tool.poetry]
name = "deta-twitter-demo"
version = "0.1.0"
description = ""
authors = ["wpeterw <peter@*****>"]

[tool.poetry.dependencies]
python = "^3.9"
TwitterAPI = "^2.7.13"
requests = "^2.28.1"
pydantic = "^1.9.2"
python-dotenv = "^0.20.0"
types-requests = "^2.28.9"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
black = "^22.6.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
